# dbt-olist-metrics

./: .gitignore  README.md  pyproject.toml
olist_metrics/: dbt_project.yml
olist_metrics/models/marts/core/: dim_customers.sql  dim_products.sql  fct_customer_orders.sql  fct_orders.sql
olist_metrics/models/marts/finance/: fct_payments.sql  fct_revenue.sql
olist_metrics/models/marts/marketing/: fct_cac_payback.sql
olist_metrics/models/marts/ml/: fct_customer_features.sql  fct_order_features.sql  fct_product_features.sql
olist_metrics/models/marts/operations/: fct_deliveries.sql  fct_seller_performance.sql
olist_metrics/models/marts/product/: fct_category_performance.sql  fct_order_reviews.sql  fct_product_reviews.sql
olist_metrics/models/staging/: sources.yml  stg_customers.sql  stg_geolocation.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_product_category_name_translation.sql  stg_products.sql  stg_sellers.sql
olist_metrics/seeds/: marketing_spend.csv
scripts/: load_to_bq.py
