[project]
name = "dbt-olist-metrics"
version = "0.1.0"
description = ""
authors = [
    {name = "Ken Nagata",email = "kayacan.berk93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery (>=1.11.1,<2.0.0)",
    "google-cloud-bigquery (>=3.40.1,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
